Removed port column, kept only one input field

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 			<form id="srv">
 				<label for="srvi">Server </label>
 				<input type="text" name="srvi" id="srvi" value="ws://localhost">
-				<label for="port">Port </label>
-				<input type="number" name="port" id="port" min="0" max="65535" step="1">
+				<!-- <label for="port">Port </label>
+				<input type="number" name="port" id="port" min="0" max="65535" step="1">  -->
 				<svg id="sem" width="24" height="24">
 					<circle id="bulb" cx="14" cy="14" r="8" stroke="black" stroke-width="3" fill="gray" />
 				</svg>
